RESOLVED FIXED162092
WKWebViewConfiguration's _incrementalRenderingSuppressionTimeout should be an NSTimeInterval
https://bugs.webkit.org/show_bug.cgi?id=162092
Summary WKWebViewConfiguration's _incrementalRenderingSuppressionTimeout should be an...
Simon Fraser (smfr)
Reported 2016-09-16 14:42:02 PDT
WKWebViewConfiguration's _incrementalRenderingSuppressionTimeout should be an NSTimeInterval
Attachments
Patch (4.12 KB, patch)
2016-09-16 14:43 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2016-09-16 14:43:47 PDT
Radar WebKit Bug Importer
Comment 2 2016-09-16 14:53:19 PDT
WebKit Commit Bot
Comment 3 2016-09-16 15:17:04 PDT
Comment on attachment 289115 [details] Patch Clearing flags on attachment: 289115 Committed r206054: <http://trac.webkit.org/changeset/206054>
WebKit Commit Bot
Comment 4 2016-09-16 15:17:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.