WKWebViewConfiguration's _incrementalRenderingSuppressionTimeout should be an NSTimeInterval https://bugs.webkit.org/show_bug.cgi?id=162092

Reviewed by Anders Carlsson.

The _incrementalRenderingSuppressionTimeout property should be a NSTimeInterval, not a CGFloat.

* UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
(-[WKWebViewConfiguration _incrementalRenderingSuppressionTimeout]):
(-[WKWebViewConfiguration _setIncrementalRenderingSuppressionTimeout:]):
* UIProcess/API/Cocoa/WKWebViewConfigurationPrivate.h:


Canonical link: https://commits.webkit.org/180223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206054 268f45cc-cd09-0410-ab3c-d52691b4dbfc